FIX: hide scrollbars

--- a/src/layouts/ExhibitionLayout.sass
+++ b/src/layouts/ExhibitionLayout.sass
@@ -40,6 +40,7 @@
     height: auto
     width: 100vw
     overflow: scroll
+    scrollbar-width: none
     display: flex
     justify-content: center
     align-items: center
@@ -51,5 +52,6 @@
     height: 100%
     overflow: scroll
     width: 100vw
+    scrollbar-width: none
     +from($desktops)
       width: 70vw
